<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondocomida"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.usuario.easyfood.com.victor.usuario.easyfood.MenuPrincipal">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Recetas"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/RecetasOpciones"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ingredientes"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        />

</LinearLayout>
